--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles.css" />
     <style>
       @media (max-width: 768px) {
         .vision-mission {
@@ -35,11 +35,11 @@
         <i class="fas fa-bars"></i>
       </div>
       <ul>
-        <li><a href="index.html">मुख्य पृष्ठ</a></li>
-        <li><a href="about.html">ग्रामपंचायतीबद्दल</a></li>
-        <li><a href="services.html">सेवा</a></li>
-        <li><a href="schemes.html">शासकीय योजना</a></li>
-        <li><a href="contact.html">संपर्क</a></li>
+        <li><a href="/">मुख्य पृष्ठ</a></li>
+        <li><a href="/about/">ग्रामपंचायतीबद्दल</a></li>
+        <li><a href="/services/">सेवा</a></li>
+        <li><a href="/schemes/">शासकीय योजना</a></li>
+        <li><a href="/contact/">संपर्क</a></li>
       </ul>
     </nav>
     <div class="hero">
@@ -77,17 +77,17 @@
         <h2>पदाधिकारी (Office Bearers)</h2>
         <div class="admin-grid">
           <div class="admin-card">
-            <img src="images/sarpanch.jpeg" alt="Sarpanch Photo" />
+            <img src="../images/sarpanch.jpeg" alt="Sarpanch Photo" />
             <h3>सरपंच</h3>
             <p>सौ. किरणताई सचिन भोकरे</p>
           </div>
           <div class="admin-card">
-            <img src="images/upsarapanch.jpeg" alt="Upsarpanch Photo" />
+            <img src="../images/upsarapanch.jpeg" alt="Upsarpanch Photo" />
             <h3>उपसरपंच</h3>
             <p>श्री. पंडितराव शालिग्राम चव्हाण</p>
           </div>
           <div class="admin-card">
-            <img src="images/gramsevak.jpeg" alt="Gramsevak Photo" />
+            <img src="../images/gramsevak.jpeg" alt="Gramsevak Photo" />
             <h3>ग्रामपंचायत अधिकारी</h3>
             <p>श्री. प्रशांत श्रीराम हरणे</p>
           </div>
@@ -216,32 +216,32 @@
           <h3>महत्वाचे दुवे</h3>
           <ul style="list-style: none; padding: 0">
             <li>
-              <a href="index.html" style="color: inherit; text-decoration: none"
+              <a href="/" style="color: inherit; text-decoration: none"
                 >मुख्यपृष्ठ</a
               >
             </li>
             <li>
-              <a href="about.html" style="color: inherit; text-decoration: none"
+              <a href="/about/" style="color: inherit; text-decoration: none"
                 >आमच्याबद्दल</a
               >
             </li>
             <li>
               <a
-                href="services.html"
+                href="/services/"
                 style="color: inherit; text-decoration: none"
                 >सेवा</a
               >
             </li>
             <li>
               <a
-                href="schemes.html"
+                href="/schemes/"
                 style="color: inherit; text-decoration: none"
                 >योजना</a
               >
             </li>
             <li>
               <a
-                href="contact.html"
+                href="/contact/"
                 style="color: inherit; text-decoration: none"
                 >संपर्क</a
               >
