--- a/schemes/index.html
+++ b/schemes/index.html
@@ -58,11 +58,11 @@
       <i class="fas fa-bars"></i>
     </div>
     <ul>
-      <li><a href="/">मुख्य पृष्ठ</a></li>
-      <li><a href="/about/">ग्रामपंचायतीबद्दल</a></li>
-      <li><a href="/services/">सेवा</a></li>
-      <li><a href="/schemes/">शासकीय योजना</a></li>
-      <li><a href="/contact/">संपर्क</a></li>
+      <li><a href="../">मुख्य पृष्ठ</a></li>
+      <li><a href="../about/">ग्रामपंचायतीबद्दल</a></li>
+      <li><a href="../services/">सेवा</a></li>
+      <li><a href="../schemes/">शासकीय योजना</a></li>
+      <li><a href="../contact/">संपर्क</a></li>
     </ul>
   </nav>
 
@@ -81,31 +81,31 @@
           <i class="fas fa-home"></i>
           <h3>प्रधानमंत्री आवास योजना</h3>
           <p>सर्वांसाठी पक्के घर मिळवण्याबाबतची योजना.</p>
-          <a href="/contact/" class="card-btn">अधिक माहिती</a>
+          <a href="../contact/" class="card-btn">अधिक माहिती</a>
         </div>
         <div class="card" data-category="women">
           <i class="fas fa-female"></i>
           <h3>लाडकी बहीण योजना</h3>
           <p>महिलांच्या आर्थिक स्वातंत्र्यासाठी महाराष्ट्र शासनाची योजना.</p>
-          <a href="/contact/" class="card-btn">अधिक माहिती</a>
+          <a href="../contact/" class="card-btn">अधिक माहिती</a>
         </div>
         <div class="card" data-category="farmers">
           <i class="fas fa-tractor"></i>
           <h3>महात्मा गांधी नरेगा (MGNREGA)</h3>
           <p>गावातील मजुरांना १०० दिवस रोजगाराची हमी.</p>
-          <a href="/contact/" class="card-btn">अधिक माहिती</a>
+          <a href="../contact/" class="card-btn">अधिक माहिती</a>
         </div>
         <div class="card" data-category="all">
           <i class="fas fa-heartbeat"></i>
           <h3>आयुष्मान भारत योजना</h3>
           <p>५ लाखांपर्यंत मोफत आरोग्य विमा उपचार.</p>
-          <a href="/contact/" class="card-btn">अधिक माहिती</a>
+          <a href="../contact/" class="card-btn">अधिक माहिती</a>
         </div>
         <div class="card" data-category="farmers">
           <i class="fas fa-tint"></i>
           <h3>कृषी सिंचन योजना</h3>
           <p>शेतकऱ्यांच्या शेतीसाठी पाण्याचे योग्य नियोजन व ठिबक सिंचन.</p>
-          <a href="/contact/" class="card-btn">अधिक माहिती</a>
+          <a href="../contact/" class="card-btn">अधिक माहिती</a>
         </div>
       </div>
     </div>
@@ -172,19 +172,19 @@
         <h3>महत्वाचे दुवे</h3>
         <ul style="list-style: none; padding: 0">
           <li>
-            <a href="/" style="color: inherit; text-decoration: none">मुख्यपृष्ठ</a>
+            <a href="../" style="color: inherit; text-decoration: none">मुख्यपृष्ठ</a>
           </li>
           <li>
-            <a href="/about/" style="color: inherit; text-decoration: none">आमच्याबद्दल</a>
+            <a href="../about/" style="color: inherit; text-decoration: none">आमच्याबद्दल</a>
           </li>
           <li>
-            <a href="/services/" style="color: inherit; text-decoration: none">सेवा</a>
+            <a href="../services/" style="color: inherit; text-decoration: none">सेवा</a>
           </li>
           <li>
-            <a href="/schemes/" style="color: inherit; text-decoration: none">योजना</a>
+            <a href="../schemes/" style="color: inherit; text-decoration: none">योजना</a>
           </li>
           <li>
-            <a href="/contact/" style="color: inherit; text-decoration: none">संपर्क</a>
+            <a href="../contact/" style="color: inherit; text-decoration: none">संपर्क</a>
           </li>
         </ul>
       </div>
