--- a/services/index.html
+++ b/services/index.html
@@ -30,11 +30,11 @@
       <i class="fas fa-bars"></i>
     </div>
     <ul>
-      <li><a href="/">मुख्य पृष्ठ</a></li>
-      <li><a href="/about/">ग्रामपंचायतीबद्दल</a></li>
-      <li><a href="/services/">सेवा</a></li>
-      <li><a href="/schemes/">शासकीय योजना</a></li>
-      <li><a href="/contact/">संपर्क</a></li>
+      <li><a href="../">मुख्य पृष्ठ</a></li>
+      <li><a href="../about/">ग्रामपंचायतीबद्दल</a></li>
+      <li><a href="../services/">सेवा</a></li>
+      <li><a href="../schemes/">शासकीय योजना</a></li>
+      <li><a href="../contact/">संपर्क</a></li>
     </ul>
   </nav>
 
@@ -126,19 +126,19 @@
         <h3>महत्वाचे दुवे</h3>
         <ul style="list-style: none; padding: 0">
           <li>
-            <a href="/" style="color: inherit; text-decoration: none">मुख्यपृष्ठ</a>
+            <a href="../" style="color: inherit; text-decoration: none">मुख्यपृष्ठ</a>
           </li>
           <li>
-            <a href="/about/" style="color: inherit; text-decoration: none">आमच्याबद्दल</a>
+            <a href="../about/" style="color: inherit; text-decoration: none">आमच्याबद्दल</a>
           </li>
           <li>
-            <a href="/services/" style="color: inherit; text-decoration: none">सेवा</a>
+            <a href="../services/" style="color: inherit; text-decoration: none">सेवा</a>
           </li>
           <li>
-            <a href="/schemes/" style="color: inherit; text-decoration: none">योजना</a>
+            <a href="../schemes/" style="color: inherit; text-decoration: none">योजना</a>
           </li>
           <li>
-            <a href="/contact/" style="color: inherit; text-decoration: none">संपर्क</a>
+            <a href="../contact/" style="color: inherit; text-decoration: none">संपर्क</a>
           </li>
         </ul>
       </div>
